Bug 508151 - Moving a window using the titlebar raises the window when configured to only activate
Summary: Moving a window using the titlebar raises the window when configured to only ...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: core (other bugs)
Version First Reported In: 6.3.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-12 08:43 UTC by Chris Moore
Modified: 2026-02-13 16:49 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Moore 2025-08-12 08:43:01 UTC
SUMMARY

I have the following section in my kwinrc:

[MouseBindings]
CommandActiveTitlebar1=Nothing
CommandInactiveTitlebar1=Activate
CommandTitlebarWheel=Raise/Lower
CommandWindow1=Activate and pass click

If I click the titlebar of a window behind another one, it is not raised. However, if I drag the window at all by the titlebar, it is raised above the frontmost window.

STEPS TO REPRODUCE
1. use the kwinrc config above
2. open two windows overlapping
3. click on the window behind by the titlebar and move it

OBSERVED RESULT

The window is raised

EXPECTED RESULT

The window moves behind the frontmost window and is not raised

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Kubuntu 25.04
KDE Plasma Version: 6.3.4
KDE Frameworks Version: 6.12.0
Qt Version: 6.8.3

ADDITIONAL INFORMATION
I'm running the wayland session
Comment 1 Bug Janitor Service 2025-08-12 09:33:38 UTC
Thank you for the bug report!

However Plasma 6.3.4 no longer receives updates or maintenance from KDE; active versions are 6.4 or newer. Please upgrade to an active version as soon as your distribution makes it available to you. Plasma is a fast-moving project, and bugs in one version are often fixed in the next one.

If you need help with Plasma 6.3.4, please contact your distribution, who bears the responsibility of providing help for older releases that are no longer receiving updates from KDE.

If you can reproduce the issue after upgrading to an active version, feel free to re-open this bug report.
Comment 2 Chris Moore 2025-08-12 09:42:38 UTC
Sorry, I should have been specific that I also see this bug in the current version on arch
Comment 3 Nate Graham 2025-08-12 15:56:42 UTC
Can confirm.
Comment 4 Chris Moore 2026-01-30 15:21:47 UTC
I think it's this commit causing the issue:
https://invent.kde.org/plasma/kwin/-/merge_requests/6714#diff-content-4901cf4a1e41ceabcf8333e2929683619d4f0698
Comment 5 Bug Janitor Service 2026-02-01 11:01:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8726
Comment 6 Bug Janitor Service 2026-02-02 07:23:11 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8728
Comment 7 Bug Janitor Service 2026-02-13 15:49:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/8799
Comment 8 Vlad Zahorodnii 2026-02-13 16:18:11 UTC
Git commit 947a9eeb61c761050f80afa70498ab8f33185850 by Vlad Zahorodnii.
Committed on 13/02/2026 at 15:48.
Pushed by vladz into branch 'Plasma/6.6'.

Prevent interactive move-resize from unconditionally raising windows

There are mouse commands that don't raise windows.

(cherry picked from commit 4331f6913c0f21716211e8e276a7e711201a6ca2)

M  +142  -0    autotests/integration/mouseactions_test.cpp
M  +16   -4    src/window.cpp
M  +2    -0    src/window.h

https://invent.kde.org/plasma/kwin/-/commit/947a9eeb61c761050f80afa70498ab8f33185850