Prevent interactive move-resize from unconditionally raising windows

There are mouse commands that don't raise windows.

(cherry picked from commit 4331f6913c0f21716211e8e276a7e711201a6ca2)

BUG: 508151